# git-util

./: Cargo.toml  README.md  pre-commit  test.sh  update_usr_bin  update_usr_bin.sh
.github/workflows/: rust.yml
src/: cli.rs  commands.rs  git.rs  main.rs  output.rs  print.rs
src/cli/: subcommands.rs
src/commands/: ripgrep.rs
src/git/: command_runner.rs  commands.rs  env_vars.rs  helpers.rs  hooks.rs
src/git/commands/: immutable.rs  mutable.rs
src/git/commands/mutable/: add.rs  commit.rs  index.rs
src/git/hooks/: pre_commit.rs  precommit.rs
