[package]
name = "git-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = [
    "derive",
    "wrap_help",
    "help",
    "color",
] }
env_logger = "0.11.0"
log = "0.4.20"
nu-ansi-term = "0.50.0"
regex = "1.10.2"
